--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "author": "SC",
     "license": "MIT",
     "scripts": {
-        "docs:dev": "vitepress dev docs",
-        "docs:build": "vitepress build docs",
-        "docs:serve": "vitepress serve docs"
+        "dev": "vitepress dev docs",
+        "build": "vitepress build docs",
+        "serve": "vitepress serve docs"
     },
     "devDependencies": {
         "vitepress": "^1.0.0-alpha.29"
