--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-    "name": "vitepress-starter",
-    "version": "1.0.0",
-    "main": "index.js",
-    "author": "SC",
-    "license": "MIT",
-    "scripts": {
-        "dev": "vitepress dev docs",
-        "build": "vitepress build docs",
-        "serve": "vitepress serve docs",
-        "prepare": "husky install"
-    },
-    "devDependencies": {
-        "@commitlint/cli": "^17.6.5",
-        "@commitlint/config-conventional": "^17.6.5",
-        "flexsearch": "^0.7.43",
-        "husky": "^8.0.3",
-        "markdown-it": "^14.0.0",
-        "vitepress": "^1.0.0-alpha.29",
-        "vitepress-plugin-search": "1.0.4-alpha.22"
-    },
-    "dependencies": {
-        "markdown-it-custom-attrs": "^1.0.2",
-        "sass": "^1.56.1",
-        "sass-loader": "^13.2.0",
-        "three": "^0.147.0",
-        "vanta": "^0.5.24"
-    }
+  "name": "vitepress-starter",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "SC",
+  "license": "MIT",
+  "scripts": {
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "serve": "vitepress serve docs",
+    "prepare": "husky install"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-conventional": "^19.2.2",
+    "flexsearch": "^0.7.43",
+    "husky": "^8.0.3",
+    "markdown-it": "^14.0.0",
+    "vitepress": "^1.0.0-alpha.29",
+    "vitepress-plugin-search": "1.0.4-alpha.22"
+  },
+  "dependencies": {
+    "git-cz": "^4.9.0",
+    "global": "^4.4.0",
+    "markdown-it-custom-attrs": "^1.0.2",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
+    "three": "^0.147.0",
+    "vanta": "^0.5.24"
+  }
 }
